# offsetter-terminal-calculator

./: .gitignore  CMakeLists.txt  gui.py  imgui.ini  main.py  main.spec  style.json
calc_settings/: __init__.py
parsing/: __init__.py  flags.py
rapidui/: __init__.py
src/cpp/: CMakeLists.txt  gui-main.cpp  gui-main.h  main.cpp
src/cpp/UI/: CMakeLists.txt  app_window.cpp  app_window.h  main_window.cpp  main_window.h
src/cpp/python_sys/: CMakeLists.txt  py_loader.cpp  py_loader.h  py_result.cpp  py_result.h
src/py/: cpp-gui.py  main.py  offsetter.py
src/py/calc_settings/: __init__.py
src/py/parsing/: response.py
